[project]
dependencies = []
description = "Add a short description here"
name = "polars-genomicranges"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
polars_genomicranges = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
polars = ">=1.17.1,<2"

[tool.pixi.environments]
default = {solve-group = "default"}
jupyter = {features = ["jupyter"], solve-group = "default"} 

[tool.pixi.feature.jupyter.dependencies]
jupyterlab = "*"

[tool.pixi.feature.jupyter.tasks]
jupyter = "jupyter lab"

